httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-app-route
  namespace: homework
spec:
  parentRefs:
    - name: homework-gateway
      namespace: homework
  hostnames:
  - "homework.otus"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /homepage
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /index.html
    backendRefs:
    - name: homework-service
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /index.html
    backendRefs:
    - name: homework-service
      port: 8000
